# watson

./: README.md  aiproject.py  atson.py  ibm.py  ibm_ui.py  script.py
ibm/: README.md  pyproject.toml
ibm/knowledge/: user_preference.txt
ibm/src/ibm/: crew.py  main.py
