[project]
name = "ibm"
version = "0.1.0"
description = "ibm using crewAI"
authors = [{ name = "drex", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "docling>=2.24.0",
]

[project.scripts]
ibm = "ibm.main:run"
run_crew = "ibm.main:run"
train = "ibm.main:train"
replay = "ibm.main:replay"
test = "ibm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
